# toonq

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  RESEARCH.md  TODO.md  build.rs  test.sh
.gitverse/workflows/: ci.yml
docs/: recipes.md  serde-research.md
src/: main.rs
