[package]
name = "toonq"
version = "0.2.0"
edition = "2021"
description = "jq for TOON — query, filter, and inspect Token-Oriented Object Notation files"
license = "ISC"
repository = "https://gitverse.ru/e4779/toonq"
keywords = ["toon", "jq", "cli", "json", "jsonl", "data"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_toon_format = "0.1.2"
serde_json = "1"
anyhow = "1"
jaq-all = { version = "0.1", features = ["formats"] }
jaq-json = { version = "2", features = ["serde"] }
