[package]
name = "toonq"
version = "0.3.0"
edition = "2021"
description = "jq for TOON — query, filter, and inspect Token-Oriented Object Notation files"
license = "ISC"
repository = "https://gitverse.ru/e4779/toonq"
homepage = "https://gitverse.ru/e4779/toonq"
documentation = "https://gitverse.ru/e4779/toonq"
keywords = ["toon", "jq", "cli", "json", "data"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_toon_format = "0.1.2"
serde_json = "1"
anyhow = "1"
jaq-all = { version = "0.1", features = ["formats"] }
jaq-json = { version = "2", features = ["serde"] }

# cargo-binstall: pull prebuilt binaries instead of compiling from source.
# Binaries are built and uploaded by .gitverse/workflows/ci.yml on every
# v* tag. The canonical home is gitverse releases, but cargo-binstall needs
# a stable URL template (gitverse's per-asset download URL embeds an opaque
# asset_id). The github mirror's `/releases/download/<tag>/<file>` shortcut
# is stable, so pkg-url is a hardcoded GitHub URL (not { repo }, which would
# expand to the gitverse repository field above). Both remotes receive
# identical assets in the release job.
#
# Verify after a release:
#   cargo binstall -y toonq && toonq --version
[package.metadata.binstall]
pkg-url = "https://github.com/e4779/toonq/releases/download/v{ version }/toonq-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"
